--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docs": "node -e \"import('open').then(o => o.default('http://localhost:3000/api'))\""
+    "docs": "node -e \"import('open').then(o => o.default('http://localhost:3000/api'))\"",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:staging": "./scripts/deploy.sh staging"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
